--- a/Scanner/Base.lproj/Main.storyboard
+++ b/Scanner/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                                 <constraint firstAttribute="width" secondItem="nyx-Lz-Fk4" secondAttribute="height" multiplier="1:1" id="hk3-C7-IIO"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Product abcdefghijklmnopqrstuvwxys" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="11" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vp6-j2-dt1">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Product abcdefghijklmnopqrstuvwxys" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="vp6-j2-dt1">
                                             <rect key="frame" x="127.5" y="8" width="239.5" height="48"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <color key="textColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -137,105 +137,6 @@
             </objects>
             <point key="canvasLocation" x="1996" y="116.49175412293854"/>
         </scene>
-        <!--Home-->
-        <scene sceneID="Xzr-2U-fAk">
-            <objects>
-                <viewController id="8aj-gS-flK" customClass="HomeViewController" customModule="Scanner" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="2aN-6c-eAI">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gy2-FH-7Wr">
-                                <rect key="frame" x="0.0" y="58" width="187" height="128"/>
-                                <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yW8-oV-hgd">
-                                <rect key="frame" x="188" y="58" width="187" height="128"/>
-                                <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cK0-Eu-rBg">
-                                <rect key="frame" x="188" y="186" width="187" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fjG-Tc-nVk">
-                                <rect key="frame" x="0.0" y="186" width="187" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vjg-4C-WhA">
-                                <rect key="frame" x="188" y="313" width="187" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZqQ-fW-WEK">
-                                <rect key="frame" x="0.0" y="313" width="187" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UcH-Oy-Mxe">
-                                <rect key="frame" x="154" y="20" width="65.5" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kd6-7Z-LEk">
-                                <rect key="frame" x="16" y="103" width="57.5" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Expired" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nap-vt-Uym">
-                                        <rect key="frame" x="0.0" y="0.0" width="57.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A2J-x9-nob">
-                                        <rect key="frame" x="8" y="20.5" width="42" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XmP-92-LZk">
-                                <rect key="frame" x="154" y="485" width="146" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Expiring in 2 weeks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="stP-me-bwZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="146" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A9O-Lp-QaF">
-                                        <rect key="frame" x="52" y="20.5" width="42" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="Gy2-FH-7Wr" firstAttribute="leading" secondItem="kXB-Vu-oWt" secondAttribute="leading" id="1bP-mi-8Wy"/>
-                            <constraint firstItem="UcH-Oy-Mxe" firstAttribute="top" secondItem="kXB-Vu-oWt" secondAttribute="top" id="BA9-0b-Ikq"/>
-                            <constraint firstItem="kXB-Vu-oWt" firstAttribute="trailing" secondItem="yW8-oV-hgd" secondAttribute="trailing" id="M0b-pg-i46"/>
-                            <constraint firstItem="yW8-oV-hgd" firstAttribute="leading" secondItem="Gy2-FH-7Wr" secondAttribute="trailing" constant="1" id="NoO-qL-bjt"/>
-                            <constraint firstItem="UcH-Oy-Mxe" firstAttribute="centerX" secondItem="kXB-Vu-oWt" secondAttribute="centerX" id="Y6h-cB-Dpa"/>
-                            <constraint firstItem="Gy2-FH-7Wr" firstAttribute="top" secondItem="kXB-Vu-oWt" secondAttribute="top" constant="38" id="cit-Lb-Boc"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="kXB-Vu-oWt"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Home" id="PkF-SF-58J"/>
-                    <connections>
-                        <outlet property="totalStockLabel" destination="A2J-x9-nob" id="uKf-f3-Scj"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zLp-eK-e02" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="909.89505247376314"/>
-        </scene>
         <!--Settings-->
         <scene sceneID="6nG-cn-J9m">
             <objects>
@@ -304,28 +205,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="6IA-Ge-isF">
-                                <rect key="frame" x="50" y="260.5" width="275" height="189"/>
+                                <rect key="frame" x="100" y="189" width="175" height="189"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scanner" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7CB-YO-jjx">
-                                        <rect key="frame" x="0.0" y="0.0" width="275" height="48"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j1U-tt-fcH">
-                                        <rect key="frame" x="0.0" y="63" width="275" height="30"/>
+                                        <rect key="frame" x="0.0" y="63" width="175" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="go" enablesReturnKeyAutomatically="YES" textContentType="email"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M8o-TW-eJM">
-                                        <rect key="frame" x="0.0" y="108" width="275" height="30"/>
+                                        <rect key="frame" x="0.0" y="108" width="175" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="go" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="16o-m8-63H">
-                                        <rect key="frame" x="0.0" y="153" width="275" height="36"/>
+                                        <rect key="frame" x="0.0" y="153" width="175" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Login">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -340,9 +241,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Qp5-8w-xKb" firstAttribute="bottom" secondItem="6IA-Ge-isF" secondAttribute="bottom" constant="217.5" id="QCe-Rr-eJq"/>
-                            <constraint firstItem="6IA-Ge-isF" firstAttribute="leading" secondItem="Qp5-8w-xKb" secondAttribute="leading" constant="50" id="RxB-Ci-J26"/>
-                            <constraint firstItem="Qp5-8w-xKb" firstAttribute="trailing" secondItem="6IA-Ge-isF" secondAttribute="trailing" constant="50" id="qpd-Id-hgU"/>
+                            <constraint firstItem="6IA-Ge-isF" firstAttribute="centerX" secondItem="3PR-H1-Bjb" secondAttribute="centerX" id="1Nh-Eu-mmn"/>
+                            <constraint firstItem="6IA-Ge-isF" firstAttribute="centerY" secondItem="3PR-H1-Bjb" secondAttribute="centerY" constant="-50" id="CCy-zW-nbg"/>
+                            <constraint firstItem="Qp5-8w-xKb" firstAttribute="trailing" secondItem="6IA-Ge-isF" secondAttribute="trailing" constant="100" id="Ja8-fh-11e"/>
+                            <constraint firstItem="6IA-Ge-isF" firstAttribute="leading" secondItem="Qp5-8w-xKb" secondAttribute="leading" constant="100" id="h58-TN-jGg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qp5-8w-xKb"/>
                     </view>
